# slidemovie

./: .gitignore  README.md  pyproject.toml
dev/: upload.sh
docs/: _config.yml  advanced-usage.md  ai-generation.md  cli-reference.md  configuration.md  index.md  installation.md  markdown-syntax.md  usage.md
docs/_data/: navigation.yml
docs/_includes/: header.html
docs/ja/: advanced-usage.md  ai-generation.md  cli-reference.md  configuration.md  index.md  installation.md  markdown-syntax.md  usage.md
slidemovie/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
